--- a/src/Endpoint.css
+++ b/src/Endpoint.css
@@ -1,11 +1,12 @@
 .Endpoint {
+  background: #fff;
   border-color: #999;
   border-style: solid;
   border-width: 1px;
   margin: 0 0 1em 0;
 }
 .Endpoint h2 {
-  background: #eee;
+  background: #ddd;
   border-color: #999;
   border-style: solid;
   border-width: 0 0 1px 0;
@@ -39,4 +40,7 @@
   display: inline-block;
   min-height: 1em;
   width: 100%;
+}
+.Endpoint .code .ace_hidden-cursors {
+  opacity: 0;
 }
