--- a/src/Errors.css
+++ b/src/Errors.css
@@ -1,4 +1,4 @@
-.Errors {
+.errors {
   background: #e00;
   color: #fff;
   max-height: 5em;
@@ -6,13 +6,13 @@
   padding: 0 1em;
   transition: max-height 0.75s;
 }
-.Errors.none {
+.errors.none {
   max-height: 0;
 }
-.Errors.none * {
+.errors.none * {
   display: none;
 }
-.Errors button {
+.errors button {
   background: rgba(0, 0, 0, 0.33);
   border-radius: 1em;
   border-width: 0;
@@ -28,10 +28,10 @@
   text-align: center;
   width: 1em;
 }
-.Errors button:active {
+.errors button:active {
   background: rgba(0, 0, 0, 0.16);
 }
-.Errors .messages {
+.errors .messages {
   font-size: 0.75em;
   line-height: 1.5em;
   padding: 0.33em 0;
